--- a/blog.html
+++ b/blog.html
@@ -97,16 +97,17 @@
                         <a href="#0">Branding</a><a href="#0">Design</a>
                     </div>
                     <div class="page-header__date">
-                        Sept 16, 2017
+                        Jan 20, 2019
                     </div>
                 </div>
 
                 <h1 class="page-header__title">
-                    <a href="minimalist_design_love.html" title="The 10 Golden Rules of Clean Simple Design" target="_blank">
-                        The 10 Golden Rules of Clean Simple Design.
+                    <a href="minimalist_design_love.html" title="Minimalist Design Love" target="_blank">
+                        Minimalist Design Love.
                     </a>
                 </h1>
-                <p>Pellentesque in ipsum id orci porta dapibus amet dui. Ad id deserunt ratione autem eius et minima ut et. Nihil sed quis velit aut enim aliquam. Quas non ad sint eveniet voluptatem est iure...</p>
+                <p>Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, architecture, branding, user interface designs and advertising communication.<br>
+                   Minimalism has been around almost as long as...</p>
                 <p>
                     <a href="minimalist_design_love.html" class="btn btn--stroke page-header__btn" target="_blank">Read More</a>
                 </p>
@@ -279,7 +280,6 @@
             <div class="col-twelve">
                 <div class="copyright">
                     <span>© Copyright Dumebi Iwuchukwu 2019</span>
-                    <span>Design by me</span>
                 </div>
 
                 <div class="go-top">
