--- a/minimalist_design_love.html
+++ b/minimalist_design_love.html
@@ -100,10 +100,10 @@
                         </div>
                     </div>
                     <h1 class="page-header__title">
-                    The 10 Golden Rules of Clean Simple Design
+                    Minimalist Design Love
                     </h1>
                     <ul class="page-header__meta">
-                        <li class="date">January 14, 2019</li>
+                        <li class="date">January 20, 2019</li>
                         <li class="author">
                             By
                             <span>Dumebi Iwuchukwu</span>
@@ -118,42 +118,53 @@
         <div class="row blog-content">
             <div class="col-full blog-content__main">
 
-                <p class="lead">Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint.</p>
+                <p class="lead">Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, photography, architecture, branding, user interface designs and advertising communication.<br>
+                   Minimalism has been around almost as long as design itself. It’s a technique that ebbs and flows, but always remains as one of the classic styles, making it a design choice that almost always works.
+                   </p>
 
-                <p>Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint ut quis proident ullamco ut dolore culpa occaecat ut laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
+                <p>Minimalist design  is simple in nature and requires a lot of discipline, with only necessary elements for functionality included in the design. <br>
+                   Elements like color and typography are also used with an emphasis on simplicity with extremely pared down palettes that may include only one hue or typeface. Details and white space are design factors that really rule the aesthetic.
                 </p>
 
-                <p>
-                <img src="images/wheel-1000.jpg"
-                     srcset="images/wheel-2000.jpg 2000w,
-                        images/wheel-1000.jpg 1000w,
-                        images/wheel-500.jpg 500w"
-                     sizes="(max-width: 2000px) 100vw, 2000px" alt="">
-                </p>
 
-                <h2>Large Heading</h2>
+                  <figure>
+                  <img src="images/Simple-Watches-Gear-Patrol-lead-2000.jpg"
+                  srcset="images/Simple-Watches-Gear-Patrol-lead-2000.jpg 2000w,
+                        images/Simple-Watches-Gear-Patrol-lead-500.jpg 500w"
+                     sizes="(max-width: 2000px) 100vw, 2000px"alt="Self Winding Chronoscope by JungHans"  class="lazyload">
+                  <figcaption style="text-align:center">Self Winding Chronoscope by JungHans</figcaption>
+                  </figure>
 
-                <p>Harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus <a href="http://#">omnis voluptas assumenda est</a> id quod maxime placeat facere possimus, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et.</p>
 
-                <blockquote><p>This is a simple example of a styled blockquote. A blockquote tag typically specifies a section that is quoted from another source of some sort, or highlighting text in your post.</p></blockquote>
+                  <h3>Short History</h3>
+                 <p>You can find elements of minimalism in design, art and architecture in almost any time period. The style has an almost timelessness to it that makes designers keep coming back.
+
+                  The roots of minimalism as we know it today can be traced to a three key periods: <br>
+                  <figure>
+                  <img src="images\KataokaPainting_270x369.png" alt="Painting by Drue Kataoka" class="lazyload">
+                  <figcaption style="text-align:center">Painting by <a href="http://www.drue.net/sumie-paintings" target="_blank" rel="noopener">Drue Kataoka</a></figcaption>
+                  </figure>
+
+
+                  <p><strong>Traditional Japanese Design:</strong>  Japanese culture values balance and simplicity and as a result their architecture, interior design, art, and graphic design have long employed minimalist aspects.</p>
+
+                  <strong>De stijl art movement:</strong> Between 1917 and the 1930s, “de stijl” – Dutch for “the style” – pushed simple and more abstract ideas with a focus on color and form using lines, rectangles, white and black, and primary colors.<br>
+                  <strong>Architects such as Van Der Rohe:</strong> The post World War I architect used materials with clean lines, simple structural frameworks and plenty of open space.<br>
+
+                  You can learn more about the history of minimalism and some of the other influencers of the trend from SpyreStudios.
+                  <p>
+                <blockquote>
+                <p>Simplicity is the ultimate sophistication.</p>
+                <cite>Leonardo da Vinci</cite>
+                </blockquote>
 
                 <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
 
-                <h3>Smaller Heading</h3>
+
 
                 <p>Dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
 
-<pre><code>
-code {
-    font-size: 1.4rem;
-    margin: 0 .2rem;
-    padding: .2rem .6rem;
-    white-space: nowrap;
-    background: #F1F1F1;
-    border: 1px solid #E1E1E1;
-    border-radius: 3px;
-}
-</code></pre>
+
 
                 <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa.</p>
 
@@ -169,19 +180,14 @@ code {
                     <li>Donec nulla non metus auctor fringilla.</li>
                 </ul>
 
+                <figure>
+                <img src="images/‌minimalist_photograph.jpg" alt="Photo by Zoner Photo Studio" style="width:100%" class="lazyload">
+                <figcaption style="text-align:center">Photo by Zoner Photo Studio</figcaption>
+                </figure>
+
                 <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
 
-                <p class="blog-content__tags">
-                    <span>Post Tags</span>
 
-                    <span class="blog-content__tag-list">
-                        <a href="#0">orci</a>
-                        <a href="#0">lectus</a>
-                        <a href="#0">varius</a>
-                        <a href="#0">turpis</a>
-                    </span>
-
-                </p>
 
                 <div class="blog-content__pagenav">
                     <div class="blog-content__nav">
@@ -201,7 +207,7 @@ code {
 
                     <div class="blog-content__all">
                         <a href="blog.html" class="btn btn--primary">
-                            View All Post
+                            View All Posts
                         </a>
                     </div>
                 </div>
