--- a/index.html
+++ b/index.html
@@ -337,12 +337,12 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html" target="_blank">Sept 16, 2017</a>
+                            <a href="blog-single.html" target="_blank">Jan 20, 2019</a>
                         </div>
 
                         <h2 class="h01"><a href="minimalist_design_love.html" target="_blank">Minimalist Design Love.</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh..
+                          Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, architecture, branding, user interface designs and advertising communication. Minimalism has been around almost as long as...
                         </p>
 
                         <div class="blog-cat">
