--- a/d3ntiti-brand-identity-and-strategy-case-study.html
+++ b/d3ntiti-brand-identity-and-strategy-case-study.html
@@ -66,7 +66,7 @@
 
         <!-- page header/blog hero
         ================================================== -->
-        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/blog-bg-02.jpg)">
+        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/sweater.jpg)">
 
             <div class="row page-header__content narrow">
                 <article class="col-full">
@@ -77,14 +77,14 @@
                     </div>
                     <h1 class="page-header__title">
                         <a href="#0" title="">
-                            Using Patterns in your Branding.
+                            Birthing the d3ntiti Brand; a case study.
                         </a>
                     </h1>
                     <ul class="page-header__meta">
-                        <li class="date">September 16, 2017</li>
+                        <li class="date">October 27, 2018</li>
                         <li class="author">
                             By
-                            <span>Jonathan Doe</span>
+                            <span>Dumebi Iwuchukwu</span>
                         </li>
                     </ul>
 
