--- a/minimalist_design_love.html
+++ b/minimalist_design_love.html
@@ -142,7 +142,7 @@
                   The roots of minimalism as we know it today can be traced to a three key periods: <br>
                   <figure>
                   <img src="images\KataokaPainting_270x369.png" alt="Painting by Drue Kataoka" class="lazyload">
-                  <figcaption style="text-align:center">Painting by <a href="http://www.drue.net/sumie-paintings" target="_blank" rel="noopener">Drue Kataoka</a></figcaption>
+                  <figcaption style="text-align:center">Painting by Japanese painter <a href="http://www.drue.net/sumie-paintings" target="_blank" rel="noopener">Drue Kataoka</a> using the traditional sumie technique</figcaption>
                   </figure>
 
 
@@ -249,7 +249,7 @@
                         <i class="im im-linkedin" aria-hidden="true"></i>
                         <span>Linkedin</span>
                     </a></li>
-                </ul>
+                    </ul>
 
                 </div>
             </div>
