--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
      <meta charset="utf-8">
-    <title>Dumebi Iwuchukwu - Blog</title>
+    <title>Blog | Dumebi Iwuchukwu</title>
     <meta name="description" content="This is where I share my insights, findings and experiences.">
     <meta name="theme-color" content="#449cff"/>
 
