--- a/d3ntiti-brand-identity-and-strategy-case-study.html
+++ b/d3ntiti-brand-identity-and-strategy-case-study.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Dumebi Iwuchukwu | d3ntiti brand identity and strategy case study</title>
+    <title>d3ntiti brand identity and strategy case study | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
