--- a/index.html
+++ b/index.html
@@ -354,16 +354,16 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html" target="_blank">Sept 15, 2017</a>
+                            <a href="blog-single.html" target="_blank">Jan 22, 2019</a>
                         </div>
 
-                        <h2 class="h01"><a href="blog-single.html" target="_blank">Photography Can Improve Your Graphic Design.</a></h2>
+                        <h2 class="h01"><a href="awesome_stippling_art_sketches.html" target="_blank">Awesome Stippling Art Sketches.</a></h2>
                         <p>
                         Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh..
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html" target="_blank">Photography</a>
+                            <a href="blog.html" target="_blank">Art</a>
                         </div>
 
 
