--- a/minimalist_design_love.html
+++ b/minimalist_design_love.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Dumebi Iwuchukwu - Minimalist Design Love.</title>
+    <title>Minimalist Design Love | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="Dumebi Iwuchukwu">
     <meta name="description" content="This is where I share my insights, findings and experiences.">
