--- a/awesome_stippling_art_sketches.html
+++ b/awesome_stippling_art_sketches.html
@@ -72,19 +72,19 @@
                 <article class="col-full">
                     <div class="page-header__info">
                         <div class="page-header__cat">
-                            <a href="#0">Branding</a><a href="#0">Design</a>
+                            <a href="#0">Art</a><a href="#0">Design</a>
                         </div>
                     </div>
                     <h1 class="page-header__title">
-                        <a href="#0" title="">
-                            Using Patterns in your Branding.
+                        <a href="#0" title="Awesome Stippling Art Sketches">
+                            Awesome Stippling Art Sketches
                         </a>
                     </h1>
                     <ul class="page-header__meta">
-                        <li class="date">September 16, 2017</li>
+                        <li class="date">January 22, 2019</li>
                         <li class="author">
                             By
-                            <span>Jonathan Doe</span>
+                            <span>Dumebi Iwuchukwu</span>
                         </li>
                     </ul>
 
