--- a/thank-you.html
+++ b/thank-you.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>Thank you - Dumebi's website, portfolio and blog</title>
+    <title>Thank you | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="Dumebi Iwuchukwu">
 
