--- a/awesome_stippling_art_sketches.html
+++ b/awesome_stippling_art_sketches.html
@@ -98,68 +98,94 @@
 
                 <p class="lead"> Stippling techniques is a very contemporary style of drawing with dabbing and dots. Pen or brush of a single color is utilized and the ink’s density is depended on the style one wants to depict. This is similar to—but distinct from—<a href="https://en.wikipedia.org/wiki/Pointillism" target="_blank" rel="noopener">pointillism</a>, which uses dots of different colours to simulate blended colours</p>
 
-                <p>Duis ex ad cupidatat tempor Excepteur cillum cupidatat fugiat nostrud cupidatat dolor sunt sint sit nisi est eu exercitation incididunt adipisicing veniam velit id fugiat enim mollit amet anim veniam dolor dolor irure velit commodo cillum sit nulla ullamco magna amet magna cupidatat qui labore cillum sit in tempor veniam consequat non laborum adipisicing aliqua ea nisi sint ut quis proident ullamco ut dolore culpa occaecat ut laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
+
+              <div class="responsive">
+                 <div class="pic">
+                <img src="images\shane_sketches\1.png" alt="Sketch by Hello Shane 1" class="lazyload">
+              </div>
+                <div class="pic">
+                <img src="images\shane_sketches\2.png" alt="Sketch by Hello Shane 2" class="lazyload">
+                </div>
+                <div class="pic">
+                <img src="images\shane_sketches\3.png" alt="Sketch by Hello Shane 3" class="lazyload">
+                </div>
+              </div>
+
+                <p>These are some amazing stippling art sketches by french artist, <a href="http://www.shanehello.com" target="_blank" rel="noopener">Hello Shane</a> who is an illustrator, hand-letter and graffiti artist. <br>
+                  Building up shading in a complex piece using hundreds of tiny ink dots is a difficult technique that requires time and patience. It is also important to be able to constantly zoom in an out, to see the image on a minuscule scale, along with the full picture. </p>
+
+                  <div class="responsive">
+                     <div class="pic">
+                    <img src="images\shane_sketches\4.png" alt="Sketch by Hello Shane 4" class="lazyload">
+                  </div>
+                    <div class="pic">
+                    <img src="images\shane_sketches\5.png" alt="Sketch by Hello Shane 5" class="lazyload">
+                    </div>
+                    <div class="pic">
+                    <img src="images\shane_sketches\6.png" alt="Sketch by Hello Shane 6" class="lazyload">
+                    </div>
+                  </div>
+              <p>Though it may not be clear from the images, Shane primarily draws in the traditional way, using a black pen, or a pencil. He might add colour in Photoshop, but the core of the illustration is hand drawn. His grasp of his tools is impressive, such mastery requires not only talent, but a whole lot offhand work and practice too. </p>
+
+                <p>Shane’s work has graced posters, t-shirts and pages of clients such as Nike, Puma and Vanity Fair. He also consistently works on personal projects. Shane’s personal work adopts a more distinctive style, drawing strong influences from comic books and graphic novels. His style overall is a curious mix of vintage typography, tattoo art and comics, with a bit of Felix the Cat and Popeye of the 20s era thrown in. It’s the unique way that the illustrator has synthesised a range influences that makes his work special.
                 </p>
 
-                <p>
-                <img src="images/wheel-1000.jpg"
-                     srcset="images/wheel-2000.jpg 2000w,
-                        images/wheel-1000.jpg 1000w,
-                        images/wheel-500.jpg 500w"
-                     sizes="(max-width: 2000px) 100vw, 2000px" alt="">
-                </p>
-
-                <h2>Large Heading</h2>
-
-                <p>Harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus <a href="http://#">omnis voluptas assumenda est</a> id quod maxime placeat facere possimus, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et.</p>
-
-                <blockquote><p>This is a simple example of a styled blockquote. A blockquote tag typically specifies a section that is quoted from another source of some sort, or highlighting text in your post.</p></blockquote>
-
-                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
-
-                <h3>Smaller Heading</h3>
-
-                <p>Dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.
-
-<pre><code>
-code {
-    font-size: 1.4rem;
-    margin: 0 .2rem;
-    padding: .2rem .6rem;
-    white-space: nowrap;
-    background: #F1F1F1;
-    border: 1px solid #E1E1E1;
-    border-radius: 3px;
-}
-</code></pre>
-
-                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa.</p>
-
-                <ul>
-                    <li>Donec nulla non metus auctor fringilla.
-                        <ul>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                        </ul>
-                    </li>
-                    <li>Donec nulla non metus auctor fringilla.</li>
-                    <li>Donec nulla non metus auctor fringilla.</li>
-                </ul>
-
-                <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
-
-                <p class="blog-content__tags">
-                    <span>Post Tags</span>
-
-                    <span class="blog-content__tag-list">
-                        <a href="#0">orci</a>
-                        <a href="#0">lectus</a>
-                        <a href="#0">varius</a>
-                        <a href="#0">turpis</a>
-                    </span>
-
-                </p>
+                <div class="responsive">
+                   <div class="pic">
+                  <img src="images\shane_sketches\7.png" alt="Sketch by Hello Shane 7" class="lazyload">
+                </div>
+                  <div class="pic">
+                  <img src="images\shane_sketches\8.png" alt="Sketch by Hello Shane 8" class="lazyload">
+                  </div>
+                  <div class="pic">
+                  <img src="images\shane_sketches\9.png" alt="Sketch by Hello Shane 9" class="lazyload">
+                  </div>
+                  <div class="pic">
+                 <img src="images\shane_sketches\10.png" alt="Sketch by Hello Shane 10" class="lazyload">
+               </div>
+                 <div class="pic">
+                 <img src="images\shane_sketches\11.png" alt="Sketch by Hello Shane 11" class="lazyload">
+                 </div>
+                 <div class="pic">
+                 <img src="images\shane_sketches\12.png" alt="Sketch by Hello Shane 12" class="lazyload">
+                 </div>
+                 <div class="pic">
+                <img src="images\shane_sketches\13.png" alt="Sketch by Hello Shane 13" class="lazyload">
+              </div>
+                <div class="pic">
+                <img src="images\shane_sketches\14.png" alt="Sketch by Hello Shane 14" class="lazyload">
+                </div>
+                <div class="pic">
+                <img src="images\shane_sketches\15.png" alt="Sketch by Hello Shane 15" class="lazyload">
+                </div>
+                <div class="pic">
+               <img src="images\shane_sketches\15.png" alt="Sketch by Hello Shane 16" class="lazyload">
+             </div>
+               <div class="pic">
+               <img src="images\shane_sketches\17.png" alt="Sketch by Hello Shane 17" class="lazyload">
+               </div>
+               <div class="pic">
+               <img src="images\shane_sketches\18.png" alt="Sketch by Hello Shane 18" class="lazyload">
+               </div>
+               <div class="pic">
+              <img src="images\shane_sketches\19.png" alt="Sketch by Hello Shane 19" class="lazyload">
+            </div>
+              <div class="pic">
+              <img src="images\shane_sketches\20.png" alt="Sketch by Hello Shane 20" class="lazyload">
+              </div>
+              <div class="pic">
+              <img src="images\shane_sketches\21.png" alt="Sketch by Hello Shane 21" class="lazyload">
+              </div>
+              <div class="pic">
+             <img src="images\shane_sketches\22.png" alt="Sketch by Hello Shane 22" class="lazyload">
+           </div>
+             <div class="pic">
+             <img src="images\shane_sketches\23.png" alt="Sketch by Hello Shane 23" class="lazyload">
+             </div>
+             <div class="pic">
+             <img src="images\shane_sketches\24.png" alt="Sketch by Hello Shane 24" class="lazyload">
+             </div>
+                </div>
 
                 <div class="blog-content__pagenav">
                     <div class="blog-content__nav">
