--- a/awesome_stippling_art_sketches.html
+++ b/awesome_stippling_art_sketches.html
@@ -186,7 +186,8 @@
              <img src="images\shane_sketches\24.png" alt="Sketch by Hello Shane 24" class="lazyload">
              </div>
                 </div>
-
+                <p style="text-align:center">Follow Shane on instagram <a href="https://www.instagram.com/shanehello/" target="_blank" rel="noopener">@shanehello</a>  and check out his works on his website: <a href="http://www.shanehello.com" target="_blank" rel="noopener">http://www.shanehello.com</a>
+                </p>
                 <div class="blog-content__pagenav">
                     <div class="blog-content__nav">
                         <div class="blog-content__prev">
