--- a/index.html
+++ b/index.html
@@ -159,10 +159,8 @@
 
                  <p>I feel the best solutions are designed in collaboration with the tribes that needs it, this makes the solutions Relevant, Original and Impactful, ensuring a High ROI to the brands involved.</p>
 
-                <p>I am an Art Manager and Resident Instructor (Art Direction)
-                     at Oxygen Academy, Lagos Nigeria</p>
-
-                <p>I am also a trained Medical Radiographer and Sonographer with a bachelor's degree in Radiography and Radiological Sciences from Nnamdi Azikiwe University.</p>
+                <p>I am an Art Manager and Resident Instructor (Art Direction) at Oxygen Academy, Lagos Nigeria <br>
+                  I am also a trained Medical Radiographer and Sonographer with a bachelor's degree in Radiography and Radiological Sciences from Nnamdi Azikiwe University.</p>
 
                 <p>I am driven to restore hope in Africa through capacity building, social entreprises and impact investing .</p>
             </div>
@@ -420,7 +418,7 @@
                 <h3>Let's work together</h3>
                 <h1>Contact.</h1>
 
-                <p> The single greatest “people skill” is a highly developed & authentic interest in the *other* person. <br>Bob Burg <a href="https://twitter.com/BobBurg" target="_blank" rel="noopener">(@BobBurg)</a> October 7, 2014 </p>
+                <p>I like to listen..</p>
             </div>
         </div>
         <div class="row contact__main">
