--- a/minimalist_design_love.html
+++ b/minimalist_design_love.html
@@ -198,9 +198,9 @@
                             </a>
                         </div>
                         <div class="blog-content__next">
-                            <a href="#0" rel="next">
+                            <a href="awesome_stippling_art_sketches.html" rel="next">
                                 <span>Next Post</span>
-                                Less Is More
+                                Awesome Stippling Art Sketches
                             </a>
                         </div>
                     </div>
