--- a/awesome_stippling_art_sketches.html
+++ b/awesome_stippling_art_sketches.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Blog Single - Hola</title>
+    <title>Awesome Stippling Art Sketches | Dumebi Iwuchukwu</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
