--- a/blog.html
+++ b/blog.html
@@ -146,16 +146,16 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html">Sept 14, 2017</a>
+                            <a href="blog-single.html">June 21, 2018</a>
                         </div>
 
-                        <h2 class="h01"><a href="blog-single.html">Workspace Design Trends and Ideas.</a></h2>
+                        <h2 class="h01"><a href="blog-single.html">World Class Business by Design [Part 1]</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh dolore irure esse Duis nulla sint.
+                        Animals are very interesting and exhibit some behaviours that deserve our attention. They migrate, fight, swim, mate, hunt, eat and drink, driven by their instinct to avoid unfavorable stimuli, organize for shelter and reproduce young ones of the species..
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html">Branding</a><a href="blog.html">Wordpress</a>
+                            <a href="blog.html">Business</a><a href="blog.html">Strategy</a>
                         </div>
                     </article>
 
