--- a/index.html
+++ b/index.html
@@ -335,12 +335,12 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html" target="_blank">Jan 20, 2019</a>
+                            <a href="minimalist_design_love.html" target="_blank">Jan 20, 2019</a>
                         </div>
 
                         <h2 class="h01"><a href="minimalist_design_love.html" target="_blank">Minimalist Design Love.</a></h2>
                         <p>
-                          Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, architecture, branding, user interface designs and advertising communication. Minimalism has been around almost as long as...
+                          Minimalist design has been one of the top design trends for the past decade. It's focus on space, simplicity and beautiful typography is stimulating.  it’s also applicable to a number of design projects, from web design, architecture, branding, user interface designs and advertising communication. Minimalism has been around almost as long as..
                         </p>
 
                         <div class="blog-cat">
@@ -352,7 +352,7 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html" target="_blank">Jan 22, 2019</a>
+                            <a href="awesome_stippling_art_sketches.html" target="_blank">Jan 22, 2019</a>
                         </div>
 
                         <h2 class="h01"><a href="awesome_stippling_art_sketches.html" target="_blank">Awesome Stippling Art Sketches.</a></h2>
@@ -369,16 +369,16 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="blog-single.html" target="_blank">Sept 14, 2017</a>
+                            <a href="world_class_business_by_design_part_1.html" target="_blank">June 21, 2018</a>
                         </div>
 
-                        <h2 class="h01"><a href="blog-single.html" target="_blank">Workspace Design Trends and Ideas.</a></h2>
+                        <h2 class="h01"><a href="world_class_business_by_design_part_1.html" target="_blank">World Class Business by Design [Part 1]</a></h2>
                         <p>
-                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta dapibus. Donec sollicitudin molestie malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus nibh dolore irure esse Duis nulla sint.
+                        Animals are very interesting and exhibit some behaviours that deserve our attention. They migrate, fight, swim, mate, hunt, eat and drink, driven by their instinct to avoid unfavorable stimuli, organize for shelter and reproduce young ones of the species..
                         </p>
 
                         <div class="blog-cat">
-                            <a href="blog.html" target="_blank">Branding</a><a href="blog.html">Wordpress</a>
+                            <a href="blog.html" target="_blank">Business</a><a href="blog.html">Strategy</a>
                         </div>
                     </article>
                     <article class="col-block">
