changed all tags to https

--- a/awesome_stippling_art_sketches.html
+++ b/awesome_stippling_art_sketches.html
@@ -111,7 +111,7 @@
                 </div>
               </div>
 
-                <p>These are some amazing stippling art sketches by french artist, <a href="http://www.shanehello.com" target="_blank" rel="noopener">Hello Shane</a> who is an illustrator, hand-letter and graffiti artist. <br>
+                <p>These are some amazing stippling art sketches by french artist, <a href="https://www.shanehello.com" target="_blank" rel="noopener">Hello Shane</a> who is an illustrator, hand-letter and graffiti artist. <br>
                   Building up shading in a complex piece using hundreds of tiny ink dots is a difficult technique that requires time and patience. It is also important to be able to constantly zoom in an out, to see the image on a minuscule scale, along with the full picture. </p>
 
                   <div class="responsive">
@@ -186,7 +186,7 @@
              <img src="images\shane_sketches\24.png" alt="Sketch by Hello Shane 24" class="lazyload">
              </div>
                 </div>
-                <p style="text-align:center">Follow Shane on instagram <a href="https://www.instagram.com/shanehello/" target="_blank" rel="noopener">@shanehello</a>  and check out his works on his website: <a href="http://www.shanehello.com" target="_blank" rel="noopener">http://www.shanehello.com</a>
+                <p style="text-align:center">Follow Shane on instagram <a href="https://www.instagram.com/shanehello/" target="_blank" rel="noopener">@shanehello</a>  and check out his works on his website: <a href="https://www.shanehello.com" target="_blank" rel="noopener">https://www.shanehello.com</a>
                 </p>
                 <div class="blog-content__pagenav">
                     <div class="blog-content__nav">
